--- a/mGesf/profiles/isk/3D/25fps_rd.cfg
+++ b/mGesf/profiles/isk/3D/25fps_rd.cfg
@@ -4,12 +4,12 @@
 % Frequency:60
 % Platform:xWR68xx
 % Scene Classifier:best_range_res
-% Azimuth Resolution(deg):15
+% Azimuth Resolution(deg):15 + Elevation
 % Range Resolution(m):0.039
 % Maximum unambiguous Range(m):11.99
-% Maximum Radial Velocity(m/s):1.51
-% Radial velocity resolution(m/s):0.19
-% Frame Duration(msec):33.333
+% Maximum Radial Velocity(m/s):1.09
+% Radial velocity resolution(m/s):0.14
+% Frame Duration(msec):40
 % Range Detection Threshold (dB):15
 % Doppler Detection Threshold (dB):15
 % Range Peak Grouping:enabled
@@ -22,15 +22,16 @@
 sensorStop
 flushCfg
 dfeDataOutputMode 1
-channelCfg 15 5 0
+channelCfg 15 7 0
 adcCfg 2 1
 adcbufCfg -1 0 1 1 1
-profileCfg 0 60 213 7 200 0 0 20 1 384 2000 0 0 30
+profileCfg 0 60 182 7 200 0 0 20 1 384 2000 0 0 30
 chirpCfg 0 0 0 0 0 0 0 1
 chirpCfg 1 1 0 0 0 0 0 4
-frameCfg 0 1 16 0 33.333 1 0
+chirpCfg 2 2 0 0 0 0 0 2
+frameCfg 0 2 16 0 40 1 0
 lowPower 0 0
-guiMonitor -1 1 0 0 0 1 1
+guiMonitor -1 1 1 0 0 1 1
 cfarCfg -1 0 2 8 4 3 0 15 1
 cfarCfg -1 1 0 4 2 3 1 15 1
 multiObjBeamForming -1 1 0.5
@@ -46,5 +47,5 @@ CQSigImgMonitor 0 127 6
 analogMonitor 0 0
 aoaFovCfg -1 -90 90 -90 90
 cfarFovCfg -1 0 0 12.00
-cfarFovCfg -1 1 -1.51 1.51
+cfarFovCfg -1 1 -1.09 1.09
 sensorStart
