mgesf plotting optimization; fix mmwave detected points unstable issue

--- a/mGesf/profiles/aop/EV2/30fps_rdHeatmap_aziHeatmap.cfg
+++ b/mGesf/profiles/aop/EV2/30fps_rdHeatmap_aziHeatmap.cfg
@@ -27,7 +27,7 @@ adcCfg 2 1
 adcbufCfg -1 0 1 1 1
 profileCfg 0 60 287 7 57.14 0 0 70 1 256 5209 0 0 30
 chirpCfg 0 0 0 0 0 0 0 1
-chirpCfg 1 1 0 0 0 0 0 2
+chirpCfg 1 1 0 0 0 0 0 2s
 chirpCfg 2 2 0 0 0 0 0 4
 frameCfg 0 2 16 0 33.333 1 0
 lowPower 0 0
